Introducing two chapters
In this rebase and sanitized patch I introduce another section with a self contained tutorial
moving the original section to a section dedicated to using the Docker environment I've built.